parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000002.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000002.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBracket,
        ],
        actual: Illegal(
            None,
        ),
        invalid_row: 1,
        invalid_col: 29,
    },
)
