parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000003.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000003.json
---
Ok(
    Array(
        [
            Number(
                -601234567895.6138,
            ),
        ],
    ),
)
